@@ -31,7 +31,7 @@
 ###
 
 library_version=2.10.0~dev
-library_revision=20180807.6
+library_revision=20180807.7
 
 # set package distribution-specific architecture
 # USAGE: set_architecture $pkg
@@ -609,6 +609,9 @@ check_deps() {
 			('debian')
 				SCRIPT_DEPS="$SCRIPT_DEPS dpkg"
 			;;
+			('innosetup1.7'*)
+				SCRIPT_DEPS="$SCRIPT_DEPS innoextract1.7"
+			;;
 			('innosetup'*)
 				SCRIPT_DEPS="$SCRIPT_DEPS innoextract"
 			;;
@@ -646,6 +649,9 @@ check_deps() {
 			('7z')
 				check_deps_7z
 			;;
+			('innoextract'*)
+				check_deps_innoextract "$dep"
+			;;
 			(*)
 				if ! command -v "$dep" >/dev/null 2>&1; then
 					check_deps_error_not_found "$dep"
@@ -669,6 +675,44 @@ check_deps_7z() {
 	else
 		check_deps_error_not_found 'p7zip'
 	fi
+}
+
+# check innoextract presence, optionally in a given minimum version
+# USAGE: check_deps_innoextract $keyword
+# CALLS: check_deps_error_not_found
+# CALLED BYD: check_deps
+check_deps_innoextract() {
+	local keyword
+	local name
+	local version
+	local version_major
+	local version_minor
+	keyword="$1"
+	case "$keyword" in
+		('innoextract1.7')
+			name='innoextract (>= 1.7)'
+		;;
+		(*)
+			name='innoextract'
+		;;
+	esac
+	if ! command -v 'innoextract' >/dev/null 2>&1; then
+		check_deps_error_not_found "$name"
+	fi
+	version="$(innoextract --version | head --lines=1 | cut --delimiter=' ' --fields=2)"
+	version_minor="${version#*.}"
+	version_major="${version%.*}"
+	case "$keyword" in
+		('innoextract1.7')
+			if
+				[ "$version_major" -lt 1 ] || \
+				[ "$version_major" -lt 2 ] && [ "$version_minor" -lt 7 ]
+			then
+				check_deps_error_not_found "$name"
+			fi
+		;;
+	esac
+	return 0
 }
 
 # display a message if a required dependency is missing
@@ -1309,7 +1353,7 @@ archive_extraction_innosetup() {
 	archive="$2"
 	destination="$3"
 	options='--progress=1 --silent'
-	if [ "$archive_type" != 'innosetup_nolowercase' ]; then
+	if [ -n "${archive_type%%*_nolowercase}" ]; then
 		options="$options --lowercase"
 	fi
 	if ( innoextract --list --silent "$archive" 2>&1 1>/dev/null |\
